--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/rose-red.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
